clusters/main/kubernetes/apps/wg-easy/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wg-easy
  namespace: wg-easy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: WireGuard client
    gethomepage.dev/group: Default
    gethomepage.dev/instance: internal
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/wg-easy.webp
    gethomepage.dev/name: WG Easy
    gethomepage.dev/widget.type: wgeasy
    gethomepage.dev/widget.url: http://wg-easy.wg-easy.svc.cluster.local:51821
    gethomepage.dev/widget.version: 2
    gethomepage.dev/widget.username: admin
    gethomepage.dev/widget.password: ${WG_EASY_PASSWORD}
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: https
  hostnames:
    - "wg-easy.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: wg-easy
          port: 51821
